<resources>

    <!-- Start Screen / Set up Game Screen -->
    <string name="enterNames">Enter the Player Names:</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="play">Play!</string>

    <!-- Main Screen -->
    <string name="app_name">Score Keeper</string>
    <string name="initialScore">0</string>
    <string name="holeInOne">hole in one</string>
    <string name="twoStrokes">2 strokes</string>
    <string name="threeStrokes">3 strokes</string>
    <string name="fourStrokes">4 strokes</string>
    <string name="fiveStrokes">5 strokes</string>
    <string name="reset">reset</string>
    <string name="hole">Hole: 1</string>
    <string name="holeNum">1</string>
    <string name="p1Result"> </string>
    <string name="p2Result"> </string>

    <!-- Content Descriptions -->
    <string name="logo_description">App Logo</string>
</resources>
