<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anala.scorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/logoAndTeamsView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logoSize"
            android:layout_weight="1"
            android:contentDescription="@string/logo_description"
            android:scaleType="fitCenter"
            android:src="@drawable/minigolflogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/mdMargin"
            android:text="@string/enterNames"
            android:textSize="@dimen/mdTextSize" />

        <EditText
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lgMargin"
            android:hint="@string/playerOne" />

        <EditText
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lgMargin"
            android:hint="@string/playerTwo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/play"
            android:textSize="@dimen/mdTextSize"
            android:onClick="beginScoreBoard"/>

    </LinearLayout>
</ScrollView>
